adding SQLite code, not working yet

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ FLASK_ENV = 'development'
 SECRET_KEY = '+Fus{=8MSV99y2ahF:@gcjtB_&J7f?}g'
 TESTING = False
 WTF_CSRF_SECRET_KEY = 'sd1vs1vsec3d2198e489ad'
+
+SQLALCHEMY_DATABASE_URI = 'sqlite:///movie-web.db'
+REPOSITORY = 'database'
