--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 FLASK_APP = 'wsgi.py'
 FLASK_ENV = 'development'
 SECRET_KEY = '+Fus{=8MSV99y2ahF:@gcjtB_&J7f?}g'
-TESTING = False
+TESTING = True
 WTF_CSRF_SECRET_KEY = 'sd1vs1vsec3d2198e489ad'
 
 SQLALCHEMY_DATABASE_URI = 'sqlite:///movie-web.db'
